# tree-sitter-yarlang

./: CMakeLists.txt  Cargo.toml  LICENSE.md  Makefile  README.md  binding.gyp  go.mod  grammar.js  highlighting-demo.yar  package-lock.json  package.json  pyproject.toml  setup.py  static  test-highlight.yar  test.yar  tree-sitter.json
bindings/c/: tree-sitter-yarlang.pc.in
bindings/c/tree_sitter/: tree-sitter-yarlang.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_yarlang/: __init__.py  binding.c
bindings/rust/: lib.rs
queries/: highlights.scm  injections.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: declarations.txt  expressions.txt  functions.txt  real_examples.txt  statements.txt  types.txt
